# trokk

./: .env  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.cjs  .stylelintrc.cjs  AGENTS.md  Cargo.toml  README.md  components.json  eslint.config.js  index.css  index.html  jest.config.cjs  libssl1.1_1.1.1f-1ubuntu2.20_amd64.deb  package-lock.json  package.json  postcss.config.js  shell.nix  tailwind.config.js  tsconfig.json  vite.config.ts  vitest-setup.ts  vitest.config.ts  vitest.setup.ts
.github/actions/setup-cmake/: action.yml
.github/actions/setup-sccache/: action.yml
.github/workflows/: build.yml  build2.yml  eslint-pull.yml  rust-check-pull.yml  rustfmt-pull.yml
docs/superpowers/designs/: 2026-04-30-theming-design.md
docs/superpowers/plans/: 2026-04-30-theming.md
scripts/: stage-windows-libvips.sh
src/: App.css  App.svelte  App.tsx  main.ts  main.tsx  sentry-instrument.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: base.json
src-tauri/icons/: icon.icns
src-tauri/installer/windows/vips/: files.txt  versions.json
src-tauri/installer/windows/vips/etc/ImageMagick-6/: delegates.xml  type-urw-base35-type1.xml
src-tauri/installer/windows/vips/etc/fonts/conf.d/: README
src-tauri/src/: auth.rs  file_mover.rs  file_size.rs  file_utils.rs  image_converter.rs  job_tracker.rs  lib.rs  main.rs  model.rs  s3.rs  system_tray.rs  test_utils.rs  tray.rs  vault.rs  windows_dll_loader.rs
src-tauri/src/error/: image_conversion_error.rs  mod.rs
src-tauri/src/model/: mod.rs
src-tauri/src/tests/: auth_tests.rs  auth_token_tests.rs  file_utils_tests.rs  image_conversion_error_test.rs  image_converter_tests.rs  main_tests.rs  mod.rs  startup_version_tests.rs  system_tray_tests.rs  test_utils.rs
src/components/layouts/: main-layout.css  main-layout.tsx
src/components/startup/: startup-screen.tsx
src/components/ui/: button.tsx  checkbox.tsx  dialog.tsx  loading-spinner.tsx  modal.tsx  resizable.tsx  rotation-status-overlay.tsx  scroll-area.tsx  slider.tsx  trokk-button.tsx  window-control-button.tsx
src/context/: auth-context.tsx  dialog-context.tsx  job-context.tsx  message-context.tsx  mock-secret-context.tsx  post-registration-context.tsx  rotation-context.tsx  secret-context.tsx  selection-context.tsx  setting-context.tsx  transfer-log-context.tsx  trokk-files-context.tsx  upload-progress-context.tsx  version-context.tsx
src/context/_tests_/: message-context.test.tsx  post-registration-context.test.tsx
src/features/delete-button/: delete-button.tsx
src/features/delete-file/: delete-file.tsx
src/features/detailed-image-view/: detailed-image-view.css  detailed-image-view.tsx
src/features/error-log/: error-log-modal.tsx  error-log-panel.tsx  error-modal.tsx
src/features/file-tree/: file-tree.tsx
src/features/file-tree-item/: file-tree-item.tsx
src/features/files-container/: files-container.tsx
src/features/job-queue/: job-queue.tsx
src/features/registration/: registration-form-props.tsx  registration-form.tsx  upload-to-s3.tsx
src/features/settings/: settings.tsx
src/features/thumbnail/: thumbnail.css  thumbnail.tsx
src/features/transfer-log/: transfer-log.tsx
src/hooks/: use-auto-focus-on-thumbnail.tsx  use-keyboard-navigation.tsx  use-text-size-shortcuts.tsx  use-toolbar-offset.tsx
src/lib/: Auth.svelte  FileTree.svelte  Files.svelte  RegistrationSchema.svelte  RequiredEnvVariables.ts  ResizableDiv.svelte  Settings.svelte  TransferLog.svelte  TrokkSettings.svelte  utils.ts  version-gate.ts
src/lib/model/: authentication-response.ts  file-tree.ts  registration-enums.ts  required-env-variables.ts  text-input-dto.ts  thumbnail.ts  transfer-log-item.ts  transfer-log-message.ts  transfer-log.ts  view-file.ts
src/lib/store/: transfer-log-store.ts
src/lib/util/: file-utils.ts  html-element-resize.ts  settings.ts
src/model/: authentication-response.ts  batch-text-input-dto.ts  error-log-entry.ts  file-tree.ts  job.ts  registration-enums.ts  rotation.ts  secret-variables.ts  text-input-dto.ts  text-input-response.ts  thumbnail.ts  transfer-log-item.ts  transfer-progress.ts  version-status.ts
src/tauri-store/: setting-store.ts  settings.ts
src/test/: App.svelte.test.ts  Auth.svelte.test.ts  FileTree.svelte.test.ts  Files.svelte.test.ts  RegistrationSchema.test.ts  Settings.svelte.test.ts  TransferLog.svelte.test.ts  mock-data.mock.ts  mock-data.test.ts
src/test/util/: file-utils.test.ts  settings.test.ts  util.ts
src/util/: file-utils.ts  panelToggle.ts  workspace-pane-layout.ts
tests/: app.test.tsx  checkbox.test.tsx  delete-button.test.tsx  delete-file.test.tsx  detailed-image-view-rotation.test.tsx  error-modal.test.tsx  file-tree-item.test.tsx  files-container.test.tsx  main-layout.test.tsx  message-context.test.tsx  post-registration-context.test.tsx  registration-form.test.tsx  rotation-context.test.tsx  settings-form.test.tsx  thumbnail-rotation.test.tsx  thumbnail.test.tsx  transfer-log.test.tsx  use-auto-focus-on-thumbnail.test.tsx  useKeyboardNavigation.test.tsx  version-gate.test.ts
