[package]
name = "trokk"
version = "0.0.1"
description = "A Tauri App"
authors = ["Team Tekst"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.2", features = ["protocol-asset", "test", "tray-icon", "devtools"] }
tauri-plugin-store = "2.4.1"
tauri-plugin-fs = { version = "2.4.4", features = ["watch"] }
tauri-plugin-oauth = "2.0.0"
tauri-plugin-http = "2.5.4"
sentry = "0.45.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
gethostname = "1.1.0"
url = "2.5.7"
reqwest = "0.12.24"
once_cell = "1.21.3"
image = "0.25.8"
webp = "0.3.1"
kamadak-exif = "0.6.1"
img-parts = "0.4"
tiff = "0.10.3"
byteorder = "1.5"
thiserror = "2.0.17"
vaultrs = "0.7.4"
vaultrs-login = "0.2.3"
tokio = { version = "1.48.0", features = ["full"] }
aws-config = "1.8.6"
aws-credential-types = { version = "1.2.6", features = ["hardcoded-credentials"] }
aws-types = { version = "1.3.8" }
aws-sdk-dynamodb = "1.93.0"
aws-sdk-s3 = { version = "1.106.0", features = ["rt-tokio", "behavior-version-latest"] }
log = "0.4.28"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-process = "2.3.1"
winnow = "0.7.13"
anyhow = "1.0.100"
filetime = "0.2"

[dev-dependencies]
tempfile = "3.23.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
debug-mock = []
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# tauri-plugin-single-instance = "2" disabled due to login windown not opening on windows
#  "rlib",
