[package]
name = "trokk"
version = "0.0.1"
description = "A Tauri App"
authors = ["Team Tekst"]
license = ""
repository = ""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["protocol-asset", "tray-icon", "test", "devtools"], optional = false }
tauri-plugin-store = "2.4.2"
tauri-plugin-fs = { version = "2.4.5", features = ["watch"] }
tauri-plugin-oauth = "2.0.0"
tauri-plugin-http = "2.5.7"
sentry = { version = "0.46.2", default-features = false, features = ["reqwest", "rustls", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
gethostname = "1.1.0"
url = "2.5.8"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
once_cell = "1.21.3"
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
webp = { version = "0.3.1", default-features = false, features = ["img"] }
little_exif = "0.6.23"
thiserror = "2.0.18"
vaultrs = { version = "0.7.4", default-features = false, features = ["rustls"] }
vaultrs-login = "0.2.3"
tokio = { version = "1.49.0", default-features = false, features = ["rt-multi-thread", "sync", "fs", "io-util"] }
# AWS versjon er syncet mot tokio for å unngå dupliserte avhengigheter og forlenget compile-tid
aws-sdk-s3 = { version = "1.119.0", default-features = false, features = ["rustls", "rt-tokio", "default-https-client", "behavior-version-latest"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-window-state = "2.4.1"

[dev-dependencies]
tempfile = "3.26.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
debug-mock = []
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# tauri-plugin-single-instance = "2" disabled due to login windown not opening on windows
#  "rlib",
